# clipping

./: .env  clipping.db  package-lock.json  pyproject.toml
app/: app.py  db.py  migrate_db.py
app/core/: ai_service.py  parsers.py  security.py
app/modules/: campaign.py  creator_profile.py  dashboard_models.py  user.py
app/routers/: auth.py  campaigns.py  identity.py  submissions.py
app/schemas/: auth.py  campaign.py  submission.py
